<resources>
    <string name="app_name">Digisuite</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="error_message_connect_error">Can\'t connect !</string>
    <string name="error_message_server_error">Internal error !</string>
    <string name="log_out">Log Out</string>
    <string name="error_message_went_wront">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="loading_customer_list">Downloading customers</string>
    <string name="loading_supplier_list">Downloading Suppliers</string>
    <string name="loading_product_list">Downloading Products</string>
    <string name="item_name">Item Name</string>
    <string name="invoice_no">Invoice No</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="caps_customer_name">CASH CUSTOMER</string>
    <string name="customer_address">Customer Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="credit">Credit</string>
    <string name="total_and_colon">Total:</string>
    <string name="tax_amt_and_colon">Tax Amt:</string>
    <string name="discount_and_colon">Discount:</string>
    <string name="net_total">Net Total:</string>
    <string name="code_barcode">Code/Barcode</string>
    <string name="unit">Unit</string>
    <string name="qty">QTY</string>
    <string name="sales_rate">Rate</string>
    <string name="discount_amt">Discount Amt</string>
    <string name="discount">Discount</string>
    <string name="sales_bill">Sales Bill</string>
    <string name="code_and_colon">Code:</string>
    <string name="unit_and_colon">Unit:</string>
    <string name="rate_and_colon">Rate:</string>
    <string name="qty_and_colon">QTY:</string>
    <string name="tax_and_colon">Tax:</string>
    <string name="caps_cash">CASH</string>
    <string name="caps_credit">CREDIT</string>
    <string name="caps_card">CARD</string>
    <string name="caps_balance">BALANCE</string>
    <string name="name_and_colon">Name :</string>
    <string name="address_and_colon">Address :</string>
    <string name="phone_and_colon">Phone :</string>
    <string name="caps_total">TOTAL</string>
    <string name="_0_00">0.00</string>
    <string name="_0">0</string>
    <string name="username">Username</string>
    <string name="copy">COPY</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="group">Group</string>
    <string name="category">Category</string>
    <string name="as_on_date">As on date</string>
    <string name="positive_stock">Positive Stock</string>
    <string name="negative_stock">Negative Stock</string>
    <string name="zero_stock">Zero Stock</string>
    <string name="stock_report">Stock Report</string>
    <string name="category_and_colon">Category :</string>
    <string name="stock_and_colon">Stock :</string>
    <string name="value_and_colon">Value :</string>
    <string name="wcp_and_colon">WCP :</string>
    <string name="empty_list">Empty list</string>
    <string name="gross_amount">Gross Amount</string>
    <string name="net_amount_and_colon">NetAmount :</string>
    <string name="discount_amount_and_colon">Discount Amount :</string>
    <string name="invoice_no_and_colon">Invoice No :</string>
    <string name="date_and_colon">Date :</string>
    <string name="gross_amount_and_colon">Gross Amount :</string>
    <string name="caps_discount_amount">DISCOUNT AMOUNT</string>
    <string name="product">Product</string>
    <string name="caps_expense_amount">EXPENSE AMOUNT</string>
    <string name="ref_no">Ref No</string>
    <string name="allocated">Allocated</string>
    <string name="activation_key">ActivationKey</string>
    <string name="build_key">BuildKey</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="failed">Failed</string>
    <string name="title_activity_maps">Map</string>
    <string name="customer_name">Customer Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_number">Contact Number</string>
    <string name="ticket_no_and_colon">Ticket No :</string>
    <string name="check_in_unscheduled_and_colon">Check in/ Unscheduled : </string>
    <string name="sales_order_bill">Sales Order Bill</string>
    <string name="sales_return_bill">Sales Return Bill</string>
    <string name="purchase_return_bill">Purchase Return Bill</string>
    <string name="purchase_bill">Purchase Bill</string>
    <string name="caps_unscheduled">UNSCHEDULED</string>
</resources>
